--- a/app/src/main/res/layout/activity_interventions_codis.xml
+++ b/app/src/main/res/layout/activity_interventions_codis.xml
@@ -8,4 +8,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:src="@drawable/ic_plus" />
+
 </LinearLayout>
