Modification modèle Position + correction layout ui_intervention_item

--- a/app/src/main/res/layout/ui_intervention_item.xml
+++ b/app/src/main/res/layout/ui_intervention_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="10dp">
 
     <TextView
@@ -9,5 +9,6 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:id="@+id/ui_intervention_item_libelle"
-        android:text="Libelle" />
+        android:text="Libelle"
+        android:layout_marginBottom="10dp" />
 </LinearLayout>
