--- a/app/src/main/res/layout/codis_interventions.xml
+++ b/app/src/main/res/layout/codis_interventions.xml
@@ -3,10 +3,18 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    <!--<ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listInterventions"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />-->
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/codis_list_interventions"
+        android:layout_weight="1">
+
+    </android.support.v7.widget.RecyclerView>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add"
         android:layout_width="wrap_content"
