--- a/app/src/main/res/layout/utm_vehicule_item.xml
+++ b/app/src/main/res/layout/utm_vehicule_item.xml
@@ -56,7 +56,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Liberation" />
+        android:text="Liberation"
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/utm_vi_btn_Confirmer"
