--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/activity_main"
 android:layout_width="match_parent"
@@ -11,78 +11,36 @@ android:paddingTop="@dimen/activity_vertical_margin"
 android:orientation="vertical"
 tools:context="istic.fr.droneproject.MapActivity">
 
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/map"
-    tools:context=".MapsActivity"
-    android:name="com.google.android.gms.maps.SupportMapFragment" />
 
 
-    <RadioGroup
-        android:id="@+id/radio_group_list_selector"
+    <fragment
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:orientation="horizontal"
-        android:background="#800000"
-        android:padding="4dp" >
+        android:layout_height="match_parent"
+        android:id="@+id/map"
+        tools:context=".MapsActivity"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
-        <RadioButton
-            android:id="@+id/radioPopular"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="Carte"
-            android:gravity="center_horizontal|center_vertical"
-            android:layout_weight="1"
+    <Button
+        android:text="@string/Points"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="77dp"
+        android:layout_marginStart="77dp"
+        android:id="@+id/button" />
 
-            android:textColor="#0F0E0E" />
-        <View
-            android:id="@+id/VerticalLine"
-            android:layout_width="1dip"
-            android:layout_height="match_parent"
-            android:background="#53494A" />
-
-        <RadioButton
-            android:id="@+id/radioAZ"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="Album"
-            android:layout_weight="1"
-
-            android:textColor="#0F0E0E" />
-
-        <View
-            android:id="@+id/VerticalLine2"
-            android:layout_width="1dip"
-            android:layout_height="match_parent"
-            android:background="#53494A" />
-
-        <RadioButton
-            android:id="@+id/radioCategory"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="Videos"
-            android:layout_weight="1"
-            android:textColor="#0F0E0E" />
-        <View
-            android:id="@+id/VerticalLine3"
-            android:layout_width="1dip"
-            android:layout_height="match_parent"
-            android:background="#53494A" />
-
-        <RadioButton
-            android:id="@+id/radioNearBy"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="@string/Moyens"
-            android:layout_weight="1"
-            android:textColor="#0F0E0E" />
-    </RadioGroup>
+    <Button
+        android:text="@string/Moyens"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/button"
+        android:layout_toRightOf="@+id/button"
+        android:layout_toEndOf="@+id/button"
+        android:id="@+id/button2" />
 
 
-
-</FrameLayout>
+</RelativeLayout>
