--- a/app/src/main/res/layout/album_fragment.xml
+++ b/app/src/main/res/layout/album_fragment.xml
@@ -4,11 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Album"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/album_liste" />
 </LinearLayout>
