--- a/app/src/main/res/layout/user_tableau_moyen.xml
+++ b/app/src/main/res/layout/user_tableau_moyen.xml
@@ -8,7 +8,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/utm_list_vehicules"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
     </android.support.v7.widget.RecyclerView>
 
@@ -16,7 +17,7 @@
         android:id="@+id/utm_btn_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0"
         android:clickable="true"
         app:fabSize="mini"
         app:srcCompat="@android:drawable/ic_input_add" />
