--- a/app/src/main/res/layout/codis_validation_item.xml
+++ b/app/src/main/res/layout/codis_validation_item.xml
@@ -1,37 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ui_validation_item_nom"
-        android:layout_weight="1"/>
+    <TableLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:stretchColumns="1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ui_validation_item_heuredemande"
-        android:layout_weight="1"/>
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_height="wrap_content"
+            android:layout_margin="0dp"
+            android:background="#b1d9e5">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ui_validation_item_libelle"
-        android:layout_weight="1"/>
+            <!-- Column 1 -->
+            <TextView
+                android:id="@+id/ui_validation_item_nom"
+                android:layout_height="wrap_content"
+                android:layout_width="0dip"
+                android:layout_weight="1"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ui_validation_item_validation"
-        android:layout_weight="1"
-        android:text="OUI"/>
+            <!-- Column 2 -->
+            <TextView
+                android:id="@+id/ui_validation_item_heuredemande"
+                android:layout_height="wrap_content"
+                android:layout_width="0dip"
+                android:layout_weight="1"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ui_validation_item_refus"
-        android:layout_weight="1"
-        android:text="NON"/>
+            <!-- Column 3 -->
+            <TextView
+                android:id="@+id/ui_validation_item_libelle"
+                android:layout_height="wrap_content"
+                android:layout_width="0dip"
+                android:layout_weight="1"/>
+
+            <!-- Column 4 -->
+            <Button
+                android:id="@+id/ui_validation_item_validation"
+                android:layout_height="wrap_content"
+                android:layout_width="0dip"
+                android:layout_weight="1"
+                android:text="Oui"/>
+
+            <!-- Column 5 -->
+            <Button
+                android:id="@+id/ui_validation_item_refus"
+                android:layout_height="wrap_content"
+                android:layout_width="0dip"
+                android:layout_weight="1"
+                android:text="Non"/>
+        </TableRow>
+
+    </TableLayout>
 </LinearLayout>
+
