Error crache fixed

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -96,7 +96,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_weight="2"
-            tools:context=".MapsActivity" />
+            tools:context=".MapActivity" />
 
     </LinearLayout>
 
