--- a/app/src/main/res/layout/codis_validation_item.xml
+++ b/app/src/main/res/layout/codis_validation_item.xml
@@ -12,6 +12,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/ui_validation_item_type"
+        android:layout_weight="1"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/ui_validation_item_heuredemande"
         android:layout_weight="1"/>
 
