--- a/app/src/main/res/layout/codis_validation_item.xml
+++ b/app/src/main/res/layout/codis_validation_item.xml
@@ -22,24 +22,30 @@
 
             <!-- Column 2 -->
             <TextView
-                android:id="@+id/ui_validation_item_heuredemande"
+                android:id="@+id/ui_validation_item_type"
                 android:layout_width="0dip"
                 android:layout_weight="1"/>
 
             <!-- Column 3 -->
             <TextView
-                android:id="@+id/ui_validation_item_libelle"
+                android:id="@+id/ui_validation_item_heuredemande"
                 android:layout_width="0dip"
                 android:layout_weight="1"/>
 
             <!-- Column 4 -->
+            <TextView
+                android:id="@+id/ui_validation_item_libelle"
+                android:layout_width="0dip"
+                android:layout_weight="1"/>
+
+            <!-- Column 5 -->
             <Button
                 android:id="@+id/ui_validation_item_validation"
                 android:layout_width="0dip"
                 android:layout_weight="1"
                 android:text="Oui"/>
 
-            <!-- Column 5 -->
+            <!-- Column 6 -->
             <Button
                 android:id="@+id/ui_validation_item_refus"
                 android:layout_width="0dip"
