--- a/app/src/main/res/layout/codis_validation.xml
+++ b/app/src/main/res/layout/codis_validation.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -27,6 +28,14 @@
                     android:textColor="#FFFFFF"
                     android:text="Nom"/>
 
+
+                    <!-- Header Type Demande -->
+                    <TextView
+                        android:layout_height="wrap_content"
+                        android:layout_width="0dip"
+                        android:layout_weight="1"
+                        android:textColor="#FFFFFF"
+                        android:text="Type"/>
                     <!-- Header Heure Demande -->
                 <TextView
                     android:layout_height="wrap_content"
@@ -55,12 +64,12 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal">
 
         <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:id="@+id/codis_list_validation"
             android:layout_weight="1"></android.support.v7.widget.RecyclerView>
     </LinearLayout>
