--- a/app/src/main/res/layout/codis_validation_item.xml
+++ b/app/src/main/res/layout/codis_validation_item.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
 
-    <TableLayout
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:stretchColumns="1">
 
         <TableRow
@@ -54,5 +50,3 @@
         </TableRow>
 
     </TableLayout>
-</LinearLayout>
-
