--- a/app/src/main/res/layout/codis_interventions.xml
+++ b/app/src/main/res/layout/codis_interventions.xml
@@ -8,13 +8,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />-->
 
-    <android.support.v7.widget.RecyclerView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/codis_list_interventions"
-        android:layout_weight="1">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    </android.support.v7.widget.RecyclerView>
+        <TableLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:stretchColumns="1">
+
+            <!-- En-tete Tableau Validation-->
+            <TableRow
+                android:id="@+id/tableRowheader"
+                android:layout_height="wrap_content"
+                android:background="#000000">
+
+                <!-- Header Nom Validation -->
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dip"
+                    android:layout_weight="1"
+                    android:textColor="#FFFFFF"
+                    android:text="Libellé des interventions"/>
+
+
+            </TableRow>
+        </TableLayout>
+    </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/codis_list_interventions"
+            android:layout_weight="1">
+
+        </android.support.v7.widget.RecyclerView>
+
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add"
         android:layout_width="wrap_content"
