--- a/app/src/main/res/layout/ui_intervention_item.xml
+++ b/app/src/main/res/layout/ui_intervention_item.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:id="@+id/ui_intervention_item_libelle"
-        android:text="Libelle"
-        android:layout_marginBottom="10dp" />
-</LinearLayout>
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:stretchColumns="1">
+    <!--android:layout_marginBottom="10dp"-->
+
+    <TableRow
+        android:id="@+id/tableRowListInt"
+        android:background="#b1d9e5"
+        android:layout_marginTop="2dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:id="@+id/ui_intervention_item_libelle"
+            android:text="Libelle"
+            android:layout_marginBottom="10dp" />
+    </TableRow>
+
+</TableLayout>
