--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -82,6 +82,85 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/m_menu_Actionvehicule"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <Button
+            android:id="@+id/m_menu_Actionvehicule_deplacer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:text="@string/deplacer" />
+
+        <Button
+            android:id="@+id/m_menu_Actionvehicule_confirmer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignTop="@+id/button"
+            android:layout_toEndOf="@+id/button"
+            android:layout_toRightOf="@+id/button"
+            android:layout_weight="1"
+            android:text="@string/confirmer" />
+
+        <Button
+            android:id="@+id/m_menu_Actionvehicule_liberer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignTop="@+id/button"
+            android:layout_toEndOf="@+id/button"
+            android:layout_toRightOf="@+id/button"
+            android:layout_weight="1"
+            android:text="@string/liberer" />
+
+        <Button
+            android:id="@+id/m_menu_Actionvehicule_parking"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:text="@string/parking" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/m_menu_Actionpoint"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <Button
+            android:id="@+id/m_menu_Actionpoint_supprimer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:text="@string/supprimer" />
+
+        <Button
+            android:id="@+id/m_menu_Actionpoint_deplacer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_alignTop="@+id/button"
+            android:layout_toEndOf="@+id/button"
+            android:layout_toRightOf="@+id/button"
+            android:layout_weight="1"
+            android:text="@string/deplacer" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/m_linearmap"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -98,35 +177,6 @@
             android:layout_weight="2"
             tools:context=".MapActivity" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/m_menu_Actionvehicule"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <Button
-            android:id="@+id/m_menu_Actionvehicule_deplacer"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_weight="1"
-            android:text="@string/Points" />
-
-        <Button
-            android:id="@+id/m_menu_Actionvehicule_confirmer"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_alignTop="@+id/button"
-            android:layout_toEndOf="@+id/button"
-            android:layout_toRightOf="@+id/button"
-            android:layout_weight="1"
-            android:text="@string/Moyens" />
     </LinearLayout>
 
 
