--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -7,7 +7,7 @@
     android:layout_weight="1"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingLeft="32dp"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="istic.fr.droneproject.MapActivity">
@@ -15,35 +15,35 @@
 
     <LinearLayout
         android:id="@+id/m_menu_vehicules"
-        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:visibility="gone"
+        android:weightSum="1"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:layout_width="120dp">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/m_list_vehicules_add"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:clickable="true"
+            android:src="@drawable/ic_plus"
+            android:layout_gravity="bottom|right"
+            android:layout_weight="0" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/m_list_vehicules"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/m_list_vehicules_add"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-
-            android:layout_margin="16dp"
-            android:clickable="true"
-            android:src="@drawable/ic_plus" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/m_menu_points"
-        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:layout_width="120dp">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/m_list_points"
@@ -54,11 +54,10 @@
 
     <LinearLayout
         android:id="@+id/m_menu_choix"
-        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:layout_width="120dp">
 
         <Button
             android:id="@+id/m_menu_choix_points"
@@ -83,11 +82,10 @@
 
     <LinearLayout
         android:id="@+id/m_menu_Actionvehicule"
-        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:layout_width="120dp">
 
         <Button
             android:id="@+id/m_menu_Actionvehicule_deplacer"
@@ -132,11 +130,10 @@
 
     <LinearLayout
         android:id="@+id/m_menu_Actionpoint"
-        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:layout_width="120dp">
 
         <Button
             android:id="@+id/m_menu_Actionpoint_supprimer"
@@ -171,10 +168,10 @@
             android:id="@+id/m_map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_weight="2"
+            android:layout_weight="0"
             tools:context=".MapActivity" />
 
     </LinearLayout>
