--- a/app/src/main/res/layout/user_tableau_moyen.xml
+++ b/app/src/main/res/layout/user_tableau_moyen.xml
@@ -3,23 +3,107 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/utm_linear"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/utm_list_vehicules"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+
+        <!-- En-tete Tableau Validation-->
+        <TableLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:stretchColumns="1">
+
+            <!-- En-tete Tableau Validation-->
+            <TableRow
+                android:id="@+id/tableRowheader"
+                android:layout_height="wrap_content"
+                android:background="#000000"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp">
+
+                <!-- Header Nom Validation -->
+                <TextView
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Nom"
+                    android:textColor="#FFFFFF"
+                    android:textSize="10dp" />
+
+
+                <!-- Header Type Demande -->
+                <TextView
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Demande"
+                    android:textColor="#FFFFFF"
+                    android:textSize="10dp" />
+                <!-- Header Heure Demande -->
+                <TextView
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Engagement"
+                    android:textColor="#FFFFFF"
+                    android:textSize="10dp" />
+
+                <!-- Header Libelle Validation -->
+                <TextView
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Arrivé"
+                    android:textColor="#FFFFFF"
+                    android:textSize="10dp" />
+
+                <!-- Header Libelle Validation -->
+                <TextView
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Libération"
+                    android:textColor="#FFFFFF"
+                    android:textSize="10dp" />
+
+                <!-- Header Btn "Oui" et "Non" - Valider la demande -->
+                <TextView
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:text="Confirmer/Libérer"
+                    android:textColor="#FFFFFF"
+                    android:textSize="10dp" />
+            </TableRow>
+        </TableLayout>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:orientation="horizontal">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/utm_list_vehicules"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/utm_btn_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:clickable="true"
-        app:fabSize="mini"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        </android.support.v7.widget.RecyclerView>
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/utm_btn_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="0"
+            android:clickable="true"
+            app:fabSize="mini"
+            app:srcCompat="@android:drawable/ic_input_add" />
+    </LinearLayout>
 </LinearLayout>
