modif in codis validation UI

--- a/app/src/main/res/layout/codis_validation.xml
+++ b/app/src/main/res/layout/codis_validation.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,63 +14,71 @@
             android:layout_height="fill_parent"
             android:stretchColumns="1">
 
-                <!-- En-tete Tableau Validation-->
-                <TableRow
-                    android:id="@+id/tableRowheader"
-                    android:layout_height="wrap_content"
-                    android:background="#000000">
+            <!-- En-tete Tableau Validation-->
+            <TableRow
+                android:id="@+id/tableRowheader"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#000000">
 
                 <!-- Header Nom Validation -->
                 <TextView
-                    android:layout_height="wrap_content"
                     android:layout_width="0dip"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:text="Nom"
                     android:textColor="#FFFFFF"
-                    android:text="Nom"/>
+                    android:textSize="16dp" />
 
 
-                    <!-- Header Type Demande -->
-                    <TextView
-                        android:layout_height="wrap_content"
-                        android:layout_width="0dip"
-                        android:layout_weight="1"
-                        android:textColor="#FFFFFF"
-                        android:text="Type"/>
-                    <!-- Header Heure Demande -->
+                <!-- Header Type Demande -->
                 <TextView
-                    android:layout_height="wrap_content"
                     android:layout_width="0dip"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:text="Type"
                     android:textColor="#FFFFFF"
-                    android:text="Heure"/>
-
-                    <!-- Header Libelle Validation -->
+                    android:textSize="16dp" />
+                <!-- Header Heure Demande -->
                 <TextView
-                    android:layout_height="wrap_content"
                     android:layout_width="0dip"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:text="Heure"
                     android:textColor="#FFFFFF"
-                    android:text="Libellé"/>
+                    android:textSize="16dp" />
+
+                <!-- Header Libelle Validation -->
+                <TextView
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Libellé"
+                    android:textColor="#FFFFFF"
+                    android:textSize="16dp" />
 
                 <!-- Header Btn "Oui" et "Non" - Valider la demande -->
                 <TextView
-                    android:layout_height="wrap_content"
                     android:layout_width="0dip"
+                    android:layout_height="wrap_content"
                     android:layout_weight="2"
+                    android:text="Validation"
                     android:textColor="#FFFFFF"
-                    android:text="Validation"/>
+                    android:textSize="16dp" />
             </TableRow>
         </TableLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/codis_list_validation"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/codis_list_validation"
             android:layout_weight="1"></android.support.v7.widget.RecyclerView>
     </LinearLayout>
 </LinearLayout>
