--- a/app/src/main/res/layout/codis_new_intervention.xml
+++ b/app/src/main/res/layout/codis_new_intervention.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <EditText android:id="@+id/libelle"
+    <EditText
+        android:id="@+id/libelle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:hint="@string/libelle" />
 
-    <EditText android:id="@+id/adresse"
+    <EditText
+        android:id="@+id/adresse"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -20,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checkedButton="@+id/code_radio_inc"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
@@ -44,7 +48,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Moyens 1er depart"/>
+        android:text="Moyens 1er depart" />
+
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listMoyens"
         android:layout_width="wrap_content"
@@ -55,23 +60,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-
         android:layout_margin="16dp"
         android:clickable="true"
         android:src="@drawable/ic_plus"
-        />
+        app:fabSize="normal" />
 
     <Button
         android:id="@+id/ButtonSendForm"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Valider"
-        android:onClick="validate"
         android:gravity="center|bottom"
-        android:layout_width="match_parent"/>
-
-
-
-
+        android:onClick="validate"
+        android:text="Valider" />
 
 
 </LinearLayout>
