Point d'interer and change order onglet

--- a/app/src/main/res/layout/user_tableau_moyen.xml
+++ b/app/src/main/res/layout/user_tableau_moyen.xml
@@ -31,6 +31,7 @@
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:text="Nom"
                     android:textColor="#FFFFFF"
                     android:textSize="13dp" />
@@ -41,6 +42,7 @@
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:text="Demande"
                     android:textColor="#FFFFFF"
                     android:textSize="13dp" />
@@ -49,6 +51,7 @@
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:text="Engagement"
                     android:textColor="#FFFFFF"
                     android:textSize="13dp" />
@@ -58,6 +61,7 @@
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:text="Arrivé"
                     android:textColor="#FFFFFF"
                     android:textSize="13dp" />
@@ -67,6 +71,7 @@
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:text="Libération"
                     android:textColor="#FFFFFF"
                     android:textSize="13dp" />
@@ -76,6 +81,7 @@
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
+                    android:gravity="center"
                     android:text="Confirmer/Libérer"
                     android:textColor="#FFFFFF"
                     android:textSize="13dp" />
